Give the equation editor menus back a z-index, fixes #746
# It was removed some time ago, and so far as I can tell this change does nothing to modify the behaviour except on Safari where we see the bug this fixes.

--- a/scss/_equation_editor.scss
+++ b/scss/_equation_editor.scss
@@ -70,8 +70,7 @@ $menu-handle-width: 160px;
         }
     }
     .top-menu {
-        /* Giving this any z-index at all prevents .dragging-background from going behind it. */
-        /* z-index: 100; */
+        z-index: 100;
         background: #509e2e;
         position: absolute;
         left: 0;
